# GoEngineKenga

./: .gitignore  BUILD.md  CHANGELOG.md  CREATING_A_GAME.md  LICENSE  README.md  RULE.md  go.mod  go.sum  import_assets.bat  package-lock.json  run_editor.bat  run_game.bat  test_go.go
.cursor/rules/: ai-humanizer.mdc
.github/workflows/: ci.yml  release.yml
cmd/kenga/: main.go
cmd/kenga-editor/: main.go
cmd/kenga-installer/: main.go
cmd/kenga-wasm/: main.go  main_default.go
docs/: AUDIT_AAA_ROADMAP.md  AUDIT_UNITY_UNREAL.md  CAD.md  CAD_FORMATS.md  DEVELOPER.md  INSTALLER.md  MOBILE.md  REFERENCES.md  RELEASE.md  ОЦЕНКА_ДВИЖКОВ.md
editor/: app.go
engine/ai/: ai.go
engine/animation/: animation.go
engine/api/: commands.go  (+4 more)
ide/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/capabilities/: default.json
ide/src-tauri/icons/: icon.icns
ide/src-tauri/src/: lib.rs  main.rs
installer/: installer.nsi
mobile/: game.go  game_default.go
scripts/: build-ide.bat  build-ide.ps1  build-ide.sh  build-installer.bat  build-installer.ps1  build-mobile-android.ps1  build-mobile-android.sh  build-mobile-ios.sh  build-release.ps1  build-release.sh  build-wasm.ps1  build-wasm.sh  convert-inventor-to-gltf.ps1  create-appimage.sh  create-deb.sh  create-rpm.sh  install-linux.sh  make-setup.bat  run-setup-admin.bat  setup-dev-env.ps1  update-version.ps1
wasm/: README.md  index.html
web-editor/: README.md  index.html  package.json  vite.config.js
website/: index.html
(+103 files in other folders)
