[package]
name = "kenga-ide"

[lib]
name = "kenga_ide_lib"
crate-type = ["lib"]
version = "0.1.0"
description = "GoEngineKenga IDE"
authors = ["GoEngineKenga"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
